# morfNotify

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  service.json
config/: morfnotify.example.json
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  INTEGRATION.md  PROTOCOL.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/morfnotify/: EmailNotifier.h  HttpServer.h  INotifier.h  LogNotifier.h  ModuleFactory.h  ModuleRegistry.h  Notification.h  NotifierFactory.h  NotifierRegistry.h  NotifyConfig.h  NotifyHttpServer.h  NotifyService.h  Service.h  ServiceConfig.h  TelegramNotifier.h  Version.h  WebhookNotifier.h
scripts/: sync-morf.ps1  sync-morf.sh
scripts/linux/: install-service.sh  morfnotify.service  update-service.sh
service/: CMakeLists.txt  main.cpp
src/: EmailNotifier.cpp  HttpServer.cpp  LogNotifier.cpp  ModuleFactory.cpp  ModuleRegistry.cpp  NotifierFactory.cpp  NotifierRegistry.cpp  NotifyHttpServer.cpp  NotifyService.cpp  Service.cpp  TelegramNotifier.cpp  WebhookNotifier.cpp
